k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react-realworld-example-app
  name: react-realworld-example-app
  namespace: ambiente
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    app: react-realworld-example-app
  sessionAffinity: None
