k8s/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-realworld-example-app
  namespace: ambiente
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: pedominguezbr8863.front.ambiente.fagurto.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: react-realworld-example-app
              port: 
                number: 8080
  tls:
  - hosts:
    - pedominguezbr8863.front.ambiente.fagurto.dev
    secretName: frontend-tls
